# demos_ctypes

./: README.adoc
date/: .bazelrc  BUILD.bazel  MODULE.bazel
date/.config/: registries.bazelrc
date/lib/: BUILD.bazel  date_functions.ml  date_types.ml
zstd/: .bazelrc  BUILD.bazel  MODULE.bazel  README.adoc
zstd/src/: BUILD.bazel  zstd.ml
zstd/stubs/: BUILD.bazel  dune  function_description.ml  zstd_functions.ml
zstd/test/: BUILD.bazel  dune  test.ml
