module(
    name = "demodate",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 0,
)

## bcr:
bazel_dep(name = "platforms",    version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc",     version = "0.1.1")

## obazl:
bazel_dep(name = "rules_ocaml", version = "3.0.0.dev")
bazel_dep(name = "tools_opam",  version = "1.0.0.dev")
bazel_dep(name = "tools_obazl", version = "3.0.0.dev",
          repo_name = "obazl")

opam = use_extension("@tools_opam//extensions:opam.bzl", "opam")
opam.deps(
    # toolchain = , # default: "xdg"
    # ocaml_version = , # default "5.3.0"
    # opam_version = "2.3.0",   # default: "2.3.0"
    # debug = 2,
    # verbosity = 1,
    # opam_verbosity = 0,
    pkgs = {
        "integers": ""
    },
)
use_repo(opam, "opam", "opam.ocamlsdk")
use_repo(opam, "opam.integers")

register_toolchains(
    "@opam.ocamlsdk//toolchain/selectors/local:all",
    "@opam.ocamlsdk//toolchain/profiles:all",
)

bazel_dep(name = "rules_ctypes", version = "0.23.0.dev")
use_repo(opam, "opam.ctypes", "opam.ctypes-foreign")
