load("@rules_ocaml//build:rules.bzl",
     "ocaml_library",
     "ocaml_ns",
     "ocaml_module",
     "ocaml_signature",
)

OPTS = ["-no-bin-annot"] # "-w", "-50"] # "-unexpected-docstring"

#################
ocaml_library(
    name       = "zstd",
    manifest = [":Zstd"],
    visibility = ["//visibility:public"],
)

ocaml_signature(
    name          = "Zstd_cmi",
    src           = "zstd.mli",
    opts          = OPTS,
    deps          = [
        # "//stubs:zstd_stubs" # dune
        "//stubs:zstd_api" # obazl: name configurable
    ]
)

ocaml_module(
    name   = "Zstd",
    struct = "zstd.ml",
    sig    = ":Zstd_cmi",
    opts   = OPTS,
    deps   = [
        # "//stubs:zstd_stubs" # dune
        "//stubs:zstd_api" # obazl: name configurable
    ]
)
